--- a/src/App2.css
+++ b/src/App2.css
@@ -1,48 +1,47 @@
 .box{
     width:200px;
     height: 200px;
-    float: left;
     background-color: rgb(226,43,104);
-    border-radius: 20px 0 20px 0;
+    border-radius: 20px 20px 20px 20px;
     display: grid;
     place-content: center;
 
 }
 
 .box2{
-    margin-top: 20px;
     width:200px;
     height: 200px;
-    float: left;
     background-color: rgb(117,226,43);
-    border-radius: 0 20px 0 20px;
+    border-radius: 20px 20px 20px 20px;
     display: grid;
     place-content: center;
 }
 
 .box3{
-    margin-top: 20px;
     width:200px;
     height: 200px;
     background-color: rgb(187,128,18);
-    border-radius: 0 20px 0 20px;
+    border-radius: 20px 20px 20px 20px;
     display: grid;
     place-content: center;
 }
 
 .box4{
-    margin-top: 20px;
     width:200px;
     height: 200px;
     background-color: rgb(35,138,207);
-    border-radius: 20px 0 60px 0;
+    border-radius: 20px 20px 20px 20px;
     display: grid;
     place-content: center;
 }
 
-.parent{
-    width: 90%;
-    margin: 10px auto;
-    align-items: center;
-    justify-content: center;
+.container {
+    display: grid;
+	grid-template-columns: 300px 150px;
+	grid-template-rows: 300px 150px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -300px;
+    margin-top: -250px;
 }
