--- a/src/ToyComponents/info.css
+++ b/src/ToyComponents/info.css
@@ -1,16 +1,16 @@
-.grid-container {
+   .grid_container {
     display: grid;
     grid-template-areas:  'header header'
-                          'content content'
+                          'aside content'
                           'aside footer';
     grid-template-rows: 200px 300px 300px;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 400px 1fr;
     height: 300px;
     margin-right: 300px;
     margin-left: 300px;
   }
   
-  .grid-item {
+  .grid_item {
     padding: 10px;
     margin: 10px;
     margin-top: 50px;
@@ -21,7 +21,7 @@
   .header {
     grid-area: header;
     color: white;
-    background-color: green;
+    background-color: rgb(38, 132, 100);
     text-align: center;
     padding: 40px;
     font-size: 30px;
@@ -29,7 +29,7 @@
   
   .aside {
     grid-area: aside;
-    background-color: rgb(38, 132, 100);
+    background-color: orange;
     text-align: center;
     padding: 100px;
     font-size: 30px;
@@ -37,16 +37,16 @@
   
   .content {
     grid-area: content;
-    background-color: rgb(231, 231, 2);
+    background-color: rgb(50, 134, 185);
     text-align: center;
-    padding: 100px;
+    padding: 50px;
     font-size: 30px;
   }
   
   .footer {
     grid-area: footer;
     color: white;
-    background-color: #555;
+    background-color: rgb(50, 134, 185);
     text-align: center;
     padding: 100px;
     font-size: 30px;
